# MotorController

./: CMakeLists.txt  README.md  arm.cmake
drivers/inc/: time.h
drivers/src/: time.c
platform/: stm32f4xx.h  system_stm32f4xx.c
src/: config.h  main.c
src/IMU/: bno080.c  bno080.h  hw.h
src/JetsonComunication/: JetsonComunication.c  JetsonComunication.h  uart_tx_rx.c  uart_tx_rx.h
src/PIDs/: Controls.c  Controls.h  PIDController.c  PIDController.h  PIDMath.c  PIDMath.h
src/core/: Scheduler.c  Scheduler.h  error_handler.c  error_handler.h  tasks.c  tasks.h
src/input/: input_jetson.c  input_jetson.h
src/math/: Quaternions.c  Quaternions.h
src/sensors/: attitude.c  depth.c  gyro.c  sensors.h
src/setup/: setup.c  setup.h
src/test/: test.c  test.h
